# dotfiles

./: .gitconfig  .zshenv  .zshrc  README.md
.config/: starship.toml
.config/btop/: btop.conf
.config/duat/: Cargo.toml
.config/duat/src/: lib.rs
.config/eww/: eww.scss  eww.yuck
.config/eww/scripts/: wifi  workspaces
.config/fish/: config.fish  fish_variables
.config/fish/functions/: coffee.fish  js.fish
.config/hypr/: hyprland.conf
.config/joshuto/: icons.toml  joshuto.toml  keymap.toml  mimetype.toml  on_preview_removed.fish  on_preview_show.fish  preview_file.fish  theme.toml
.config/kak/: colorscheme.kak  kakrc  statusline.kak
.config/kak-lsp/: kak-lsp.toml
.config/kak/colors/: kakoune
.config/kak/plugins/.build/clipb.kak/: config
.config/kak/plugins/.build/kakoune/: config  hooks
.config/kak/plugins/.build/kakoune-lsp/: config  hooks
.config/kak/plugins/.build/modeline-extras/: config
.config/kak/plugins/.build/modeline-extras.kak/: config
.config/kak/plugins/modeline-extras.kak/rc/: modeline-extras.kak
.config/kitty/: kitty.conf
.config/qalculate/: qalc.cfg  qalc.history
.local/share/applications/: Baba Is You.desktop  Balatro.desktop  Celeste.desktop  Europa Universalis IV.desktop  Spelunky 2.desktop  The Binding of Isaac Rebirth.desktop  kak.desktop
.local/share/fonts/: .uuid
