[package]
# Don't change the package's name. Duat depends on it.
name = "config"
version = "0.1.3"
edition = "2021"
# Please don't post your configuration crate to crates.io.
# If you want to keep it somewhere, try a repository website,
# like github or gitlab
publish = false

[lib]
crate-type = ["dylib"]

[dependencies]
# You can get rid of this one, if you don't want the duat-kak editor.

[dependencies.duat-kak]
version = ">=0.1.3"
path = "/home/mateus/Development/duat/duat-kak"

[dependencies.duat]
version = ">=0.1.3"
path = "/home/mateus/Development/duat"
features = ["term-ui"]

[features]
default = []
deadlocks = ["duat/deadlocks"]

[profile.profiling]
inherits = "dev"
